0.08
    - Only add one newline before =head, like Pod 5 renderers usually do

0.07 Mon Jul 13 17:13:29 EDT 2009
    - Make =head1 to =head4 headings bold when appropriate
    - Fix problem with L<> links not being translated

0.06 Sat Jul 11 21:26:06 EDT 2009
    - Changed the colorscheme a bit, toned it down
    - Added a 01_compile.t
    - Added no_index directives for 3rd party packages in Makefile.PL

0.05 Wed Jul  1 11:15:57 GMT 2009
    - Rename methods instead of redefining ones from ::To::Text

0.04 Fri Jun 26 05:15:07 GMT 2009
    - Fixed a fatal typo. Damn.

0.03 Fri Jun 26 04:49:56 GMT 2009
    - Silence redefinition warnings in case someone loads this formatter
      after having loaded another one

0.02 Thu May 28 16:09:19 GMT 2009
    - Ship a README file generated from the Pod source
    - Use a color for R<> (same as I<>)

0.01 Sun May  3 17:48:11 GMT 2009
    - Initial release